--- a/index.html
+++ b/index.html
@@ -4,9 +4,33 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Saku Digital</title>
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.css"
+    />
+
+    <link rel="stylesheet" href="CSS/style.css" />
   </head>
+
   <body>
-    
+    <header>
+      <input type="checkbox" name="" id="toggler" />
+      <label for="toggler" class="fas fa-bars"></label>
+
+      <a href="#" class="logo">Saku Digital<span>.</span></a>
+
+      <nav class="navbar">
+        <a href="#home">Home</a>
+        <a href="#about">About</a>
+        <a href="#pricelist">Pricelist</a>
+        <a href="#reward">Reward Sales</a>
+      </nav>
+
+      <div class="icons">
+        <a href="#" class="fas fa-user"></a>
+      </div>
+    </header>
   </body>
 </html>
