--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <input type="checkbox" name="" id="toggler" />
       <label for="toggler" class="fas fa-bars"></label>
 
-      <a href="#" class="logo">Saku Digital<span>.</span></a>
+      <a href="#" class="logo">SakuDigital<span>'</span></a>
 
       <nav class="navbar">
         <a href="#home">Home</a>
@@ -32,5 +32,24 @@
         <a href="#" class="fas fa-user"></a>
       </div>
     </header>
+
+    <!-- Header sections ends-->
+
+    <!-- Home sections ends-->
+
+    <section class="home" id="home">
+      <div class="content">
+        <h3>Saku Digital</h3>
+        <span>Up and Get</span>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. In sunt modi
+          quae assumenda quaerat reiciendis nostrum minima tempora praesentium.
+          Quo.
+        </p>
+        <a href="#" class="btn">Search</a>
+      </div>
+    </section>
+
+    <!-- Home sections ends-->
   </body>
 </html>
