--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <nav class="navbar">
         <a href="#home">Home</a>
         <a href="#about">About</a>
-        <a href="#pricelist">Pricelist</a>
+        <a href="#pricelist">Price List</a>
         <a href="#reward">Reward Sales</a>
       </nav>
 
