--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <section class="home" id="home">
       <div class="content">
         <h3>Saku Digital</h3>
-        <span>Up and Get</span>
+        <span>Booklet dan Buku Saku</span>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. In sunt modi
           quae assumenda quaerat reiciendis nostrum minima tempora praesentium.
