--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <!-- Header sections ends-->
 
-    <!-- Home sections ends-->
+    <!-- Home sections start-->
 
     <section class="home" id="home">
       <div class="content">
