--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <input type="checkbox" name="" id="toggler" />
       <label for="toggler" class="fas fa-bars"></label>
 
-      <a href="#" class="logo">SakuDigital<span>'</span></a>
+      <a href="#" class="logo">E<span>'</span>Saku</a>
 
       <nav class="navbar">
         <a href="#home">Home</a>
