--- a/index.html
+++ b/index.html
@@ -51,5 +51,30 @@
     </section>
 
     <!-- Home sections ends-->
+
+    <!--about sections start-->
+
+    <section class="about" id="about">
+      <h1 class="heading"><span>About</span>Us</h1>
+      <div class="row">
+        <div class="content">
+          <h3>Why Choose US</h3>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque
+            quam, expedita obcaecati dolor quo aspernatur? Numquam et, ipsa
+            iure, autem modi quaerat illum qui at eius eaque aspernatur
+            asperiores magnam.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea debitis
+            dicta ipsa voluptatem, explicabo fugiat sequi exercitationem rem
+            voluptates consequuntur.
+          </p>
+          <a href="#" class="btn">Learn More</a>
+        </div>
+      </div>
+    </section>
+
+    <!--about sections end-->
   </body>
 </html>
