--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <h1 class="heading"><span>About</span>Us</h1>
       <div class="row">
         <div class="content">
-          <h3>Why Choose US</h3>
+          <h3>Why Choose Us</h3>
           <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque
             quam, expedita obcaecati dolor quo aspernatur? Numquam et, ipsa
